bug fix on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,6 @@ body {
 }
 
 @media only screen and (max-width: 520px) { /* For phones */
-  h2 { margin-bottom: 32px; }
   .navbar { margin-bottom: 10%; }
   .id-pic { width: 140px; height: 140px; }
   .intro { margin-top: 10%; margin-bottom: 10%; }
@@ -55,7 +54,6 @@ body {
 }
 
 @media only screen and (min-width: 521px) { /* For tablets */
-  h2 { margin-bottom: 50px; }
   body { background-image: url("../images/bg.jpg") }
   .navbar { margin-bottom: 8%; }
   .id-pic { width: 160px; height: 160px; }
@@ -64,7 +62,6 @@ body {
 }
 
 @media only screen and (min-width: 960px) { /* For desktop */
-  h2 { margin-bottom: 50px; }
   .navbar { margin-bottom: 6%; }
   .id-pic { width: 180px; height: 180px; }
   .intro { margin-top: 5%; }
@@ -74,9 +71,16 @@ body {
 .box {
   height: 100%;
   overflow-y: auto;
+  padding-top: 120px;
+  padding-bottom: 60px;
 }
 
 .navbar {
+  top: 0;
+  z-index: 2;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
   height: 55px;
   background-color: #1b9f9d;
   opacity: 0.9;
@@ -112,20 +116,14 @@ body {
 #logo {
   height: 34px;
 }
-
 #logo-a {
   padding-bottom: 0;
   padding-top: 10px;
 }
 
-.media i:active, .btmedia i:active, .pages a:active, #gr:active, #btgr:active, #logo:active {
-  background-color: transparent;
-}
-
 .media i:hover, .btmedia i:hover, .pages a:hover, #gr:hover, #btgr:hover, #logo:hover {
   opacity: 0.6;
 }
-
 #mailBtn:hover {
   background-color: #1b9f9d;
 }
@@ -148,7 +146,6 @@ body {
   text-align: center;
   padding-left: 3%;
   padding-right: 3%;
-  margin-bottom: 70px;
 }
 
 a {
@@ -165,11 +162,12 @@ h2 {
   font-size: 24px;
   font-weight: 400;
   color: #343341;
+  margin-bottom: 50px;
 }
 
 #mailBtn {
+  margin: 40px;
   padding: 11px;
-  padding-bottom: 12px;
   text-decoration: none;
   color: white;
   background-color: rgba(27,159,157,0.8);
@@ -196,7 +194,6 @@ h2 {
   background-image: none;
   background-color: #f6f6f6;
 }
-
 .uc {
   text-align: center;
   width: 50%;
@@ -204,15 +201,11 @@ h2 {
   margin-right: auto;
   margin-left: auto;
 }
-
 .uc h1, .uc h2 {
   color: #757575;
 }
-
 #port .btnav { background-color: transparent; }
-
 #port #btgr { color: #1b9f9d; }
-
 #port .btmedia i {
   font-size: 20px;
   color: #1b9f9d;
